Yeun 2015-11-06 当日首次提交

--- a/res/layout/activity_activity.xml
+++ b/res/layout/activity_activity.xml
@@ -84,8 +84,15 @@
         android:divider="@null"
         android:listSelector="@android:color/transparent"
         android:scrollbarFadeDuration="1000"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical" 
+        />
     <!-- android:fastScrollEnabled="true" -->
     <!-- style="@style/w_h_full" -->
+    
+    
+   <!-- <include 
+       android:id="@+id/customdialogprogress"
+       layout="@layout/customdialogprogress" 
+       android:visibility="gone"/> -->
 
 </LinearLayout>
