--- a/res/layout/my_secretary_ask_answer_item.xml
+++ b/res/layout/my_secretary_ask_answer_item.xml
@@ -24,6 +24,8 @@
             android:paddingRight="20dp"
             android:layout_marginRight="@dimen/margin_top_20"
             android:textColor="@color/text_black_1"
+            android:textIsSelectable="true"
+            android:autoLink="all"
             />
          <LinearLayout
             android:id="@+id/ll_user_head"
@@ -71,6 +73,8 @@
             android:paddingTop="@dimen/margin_top_20"
             android:paddingBottom="@dimen/margin_top_20"
             android:paddingRight="@dimen/margin_top_20"
-            android:textColor="@color/text_black_2" />
+            android:textColor="@color/text_black_2" 
+            android:textIsSelectable="true"
+            android:autoLink="all"/>
     </RelativeLayout>
 </LinearLayout>
