--- a/res/layout/my_secretary_question_item.xml
+++ b/res/layout/my_secretary_question_item.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_white"
-    android:orientation="vertical"
+    android:layout_marginBottom="@dimen/margin_top_35"
     android:layout_marginLeft="@dimen/margin_top_35"
     android:layout_marginRight="@dimen/margin_top_35"
-    android:layout_marginBottom="@dimen/margin_top_35"
-    android:paddingTop="@dimen/margin_top_20"
-    android:paddingBottom="@dimen/margin_top_20"
+    android:background="@color/app_white"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/margin_top_30"
     android:paddingLeft="@dimen/margin_top_30"
     android:paddingRight="@dimen/margin_top_30"
-    >
+    android:paddingTop="@dimen/margin_top_30" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,19 +47,32 @@
 
             <TextView
                 android:id="@+id/my_question_type_tv"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/my_question_btn_shape"
+                android:gravity="center"
                 android:textSize="12sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/my_question_time"
+        <LinearLayout
+            style="@style/w_wrap_h_wrap"
             android:layout_gravity="top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/my_question_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/have_information"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/circle_shape_infor_center"
+                android:visibility="invisible" />
+        </LinearLayout>
     </LinearLayout>
 
     <TextView style="@style/line_style_2" />
@@ -72,8 +84,8 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:ellipsize="end"
+        android:lineSpacingExtra="5dp"
         android:maxLines="2"
-        android:lineSpacingExtra="3dp"
         android:text="问题:" />
 
     <TextView style="@style/line_style_2" />
@@ -84,7 +96,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ellipsize="end"
-        android:lineSpacingExtra="3dp"
+        android:lineSpacingExtra="5dp"
         android:maxLines="2"
         android:text="回复:" />
+
 </LinearLayout>
