--- a/res/layout/activity_minhistory_recorder1.xml
+++ b/res/layout/activity_minhistory_recorder1.xml
@@ -21,11 +21,23 @@
 	        android:layout_centerInParent="true"/>
 	
 	    <TextView
+	        android:id="@+id/tv_nohistory"
 	        style="@style/text_style_nomal_28"
 	        android:layout_below="@id/bt_close"
 	        android:layout_centerHorizontal="true"
 	        android:text="暂无浏览记录"
 	        android:textColor="#AFAFAF" 
 	        android:layout_marginTop="20dp"/>
+	     
+	     <TextView
+	         android:id="@+id/tv_gotoHomeFrag"
+	        android:layout_below="@id/tv_nohistory"
+	        style="@style/text_style_nomal_28"
+	        android:layout_centerHorizontal="true"
+	        android:text="先去瞅瞅吧  "
+	        android:textColor="@color/app_green1"
+	        android:layout_marginTop="10dp"
+	        />
+	    
 	</RelativeLayout>
 </RelativeLayout>
