--- a/res/layout/bottom_menu.xml
+++ b/res/layout/bottom_menu.xml
@@ -9,7 +9,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/line_bg" />
+        android:background="@color/line_bg1" />
 
     <LinearLayout
         android:layout_width="match_parent"
