--- a/res/layout/refresh_footer.xml
+++ b/res/layout/refresh_footer.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" 
+    >
+<RelativeLayout 
     android:id="@+id/mFooterView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical" ><!-- xmlns:android="http://schemas.android.com/apk/res/android" -->
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -35,3 +41,4 @@
     </LinearLayout>
 
 </RelativeLayout>
+</LinearLayout>
