--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -15,6 +15,7 @@
     <color name="app_grey5">#B3B3B3</color>
     <color name="app_grey6">#999999</color>
     <color name="app_grey7">#757575</color>
+    <color name="app_grey8">#F5F5F5</color>
     <color name="popup_main_background">#b0000000</color>
     <color name="line_bg">#C9C9C9</color>
     <color name="line_bg_expand">#EBEBEB</color>
