--- a/res/layout/activity_bank_card_item.xml
+++ b/res/layout/activity_bank_card_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent" >
+
     <LinearLayout
         android:id="@+id/list_display_view_container"
         android:layout_width="match_parent"
@@ -53,13 +53,22 @@
                     android:layout_gravity="center_horizontal"
                     android:text="@string/currentCard" />
 
-                <com.android.pc.ioc.image.RecyclingImageView
+                <RelativeLayout
                     android:id="@+id/iv_bank_card_add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_alignTop="@id/tv_bank_card_name"
-                    android:background="@drawable/activity_open" />
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="10dp"
+                     >
+                    <com.android.pc.ioc.image.RecyclingImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/activity_open"
+                         />
+                </RelativeLayout>
             </RelativeLayout>
 
             <View
