--- a/res/layout/activity_person_cent.xml
+++ b/res/layout/activity_person_cent.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_white"
-    android:orientation="vertical" >
+    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/com.lansun.qmyo">
 
     <include layout="@layout/activity_com" />
 
@@ -42,13 +42,15 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/portrait_personal" />
 
-            <com.lansun.qmyo.view.CircularImage
+            <com.lansun.qmyo.override.CircleImageView
                 android:id="@+id/iv_person_center_head"
                 style="@style/user_head_small"
                 android:layout_centerHorizontal="true"
+                app:circle_border_width="2dp"
+                app:circle_border_color="@color/app_green1"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/l_r_35"
-                android:background="@drawable/person_center_default_head" />
+                android:src="@drawable/default_avatar" />
         </RelativeLayout>
     </RelativeLayout>
 
