--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res/com.lansun.qmyo"
     style="@style/w_full_h_wrap"
     android:background="@drawable/bg_main" >
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,54 +14,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center" >
-
-            <RelativeLayout
-                android:id="@+id/relativeLayout1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_top_20" >
-
-                <LinearLayout
-                    android:id="@+id/ll_secretary_setting"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="-10dp"
-                    android:layout_marginLeft="@dimen/l_r_35"
-                    android:background="@drawable/circle_background_gray"
-                    android:gravity="center"
-                    android:orientation="vertical" >
-
-                    <com.android.pc.ioc.image.RecyclingImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/secretary_setting" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/have_information"
-                    android:layout_toRightOf="@id/ll_secretary_setting"
-                    android:layout_width="10dp"
-                    android:visibility="gone"
-                    android:layout_height="10dp"
-                    android:background="@drawable/circle_shape" />
-
-                <LinearLayout
-                    android:id="@+id/ll_secretary_help"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/l_r_35"
-                    android:background="@drawable/circle_background_gray"
-                    android:gravity="center" >
-
-                    <com.android.pc.ioc.image.RecyclingImageView
-                        android:id="@+id/bt_close"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/secretary_help" />
-                </LinearLayout>
-            </RelativeLayout>
-
             <LinearLayout
                 android:id="@+id/linearLayout1"
                 android:layout_width="wrap_content"
@@ -252,7 +203,53 @@
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
+<RelativeLayout
+                android:id="@+id/relativeLayout1"
+                android:layout_alignParentTop="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_top_12" >
 
+                <LinearLayout
+                    android:id="@+id/ll_secretary_setting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="-10dp"
+                    android:layout_marginLeft="@dimen/l_r_35"
+                    android:background="@drawable/circle_background_gray"
+                    android:gravity="center"
+                    android:orientation="vertical" >
+
+                    <com.android.pc.ioc.image.RecyclingImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/secretary_setting" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/have_information"
+                    android:layout_toRightOf="@id/ll_secretary_setting"
+                    android:layout_width="10dp"
+                    android:visibility="gone"
+                    android:layout_height="10dp"
+                    android:background="@drawable/circle_shape" />
+
+                <LinearLayout
+                    android:id="@+id/ll_secretary_help"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/l_r_35"
+                    android:background="@drawable/circle_background_gray"
+                    android:gravity="center" >
+
+                    <com.android.pc.ioc.image.RecyclingImageView
+                        android:id="@+id/bt_close"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/secretary_help" />
+                </LinearLayout>
+            </RelativeLayout>
     <include layout="@layout/bottom_menu" />
 
 </RelativeLayout>
