--- a/res/layout/activity_secretary_question_detail.xml
+++ b/res/layout/activity_secretary_question_detail.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#EBEBEB"
     style="@style/w_match_h_match" >
+
     <LinearLayout
+        android:id="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/app_bg"
+        android:orientation="vertical" >
+
+        <include layout="@layout/activity_com" />
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lv_mine_secretary_quetions_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/ll_mai_comment_reply"
-        android:background="@color/app_bg"
-        android:orientation="vertical" >
-        <include layout="@layout/activity_com" />
-
-        <TextView
-            android:id="@+id/tv_mine_secretary_type"
-            style="@style/text_style_small_24"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/margin_top_35"
-            android:gravity="center"
-            android:background="@drawable/my_question_btn_shape"
-            android:textColor="@color/text_gray3" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/lv_mine_secretary_quetions_detail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/margin_top_17"
-            />
-    </LinearLayout>
+        android:layout_below="@+id/top"
+        android:layout_marginTop="@dimen/margin_top_17" />
 
     <LinearLayout
         android:id="@+id/ll_mai_comment_reply"
@@ -33,36 +29,35 @@
         android:layout_alignParentBottom="true"
         android:background="#DBDBDB"
         android:gravity="center_vertical"
-        android:paddingLeft="@dimen/margin_top_10"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/margin_top_10" >
 
-         <EditText
+        <EditText
+            android:id="@+id/et_secretary_question"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:hint="@string/pump"
-            android:textSize="14sp"
-            android:padding="@dimen/margin_top_20"
-            android:textCursorDrawable="@null"
             android:layout_gravity="center"
             android:layout_margin="@dimen/margin_top_10"
-            android:maxLines="6"
-            android:lineSpacingExtra="4dp"
-            android:id="@+id/et_secretary_question"
+            android:layout_weight="1"
             android:background="@drawable/cicle_back_talk_detail_send"
-            />
+            android:hint="@string/pump"
+            android:lineSpacingExtra="4dp"
+            android:maxLines="6"
+            android:padding="@dimen/margin_top_20"
+            android:textCursorDrawable="@null"
+            android:textSize="14sp" />
+
         <TextView
             android:id="@+id/btn_secretary_question_commit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="发送"
-            android:textSize="12sp"
-            android:textColor="#fff"
             android:layout_gravity="center"
-            android:padding="@dimen/margin_top_15"
-            android:background="@drawable/send_shape"
             android:layout_marginRight="@dimen/margin_top_20"
-            />
+            android:background="@drawable/send_shape"
+            android:padding="@dimen/margin_top_15"
+            android:text="发送"
+            android:textColor="#fff"
+            android:textSize="12sp" />
     </LinearLayout>
 
 </RelativeLayout>
