--- a/res/layout/activity_message_item.xml
+++ b/res/layout/activity_message_item.xml
@@ -41,13 +41,13 @@
         <TextView
             android:gravity="center"
             android:id="@+id/tv_message_item_count"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:layout_alignParentRight="true"
+            android:background="@drawable/circle_shape_infor_center" 
             android:layout_alignTop="@id/tv_message_item_desc"
             android:layout_marginLeft="@dimen/l_r_35"
-            android:layout_marginRight="@dimen/l_r_35"
-            android:background="@drawable/circle_shape_infor_center" />
+            android:layout_marginRight="@dimen/l_r_35"/><!-- -->
 
         <View
             android:layout_width="match_parent"
