--- a/res/drawable/circle_shape_infor_center.xml
+++ b/res/drawable/circle_shape_infor_center.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:useLevel="false"
+    android:shape="oval"
+    >
 
     <solid android:color="@color/app_green1" />
 
     <stroke
-        android:width="3dp"
+        android:width="1dp"
         android:color="#fff" />
-
-    <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+    
+    <size
+        android:width="10dp"
+        android:height="10dp"/>
+        
 </shape>
