--- a/res/layout/secretary_detail_footer.xml
+++ b/res/layout/secretary_detail_footer.xml
@@ -44,12 +44,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/app_white"
-        android:lines="15"
         android:textSize="14sp"
         android:padding="17dp"
         android:gravity="top"
         android:textColorHint="#AFAFAF"
-        android:lineSpacingExtra="4dp"
+        android:lines="15"
         android:maxLines="20"
-        />
+        android:lineSpacingExtra="4dp" 
+        /><!-- android:singleLine="true"
+        android:imeActionLabel="提交"
+        android:imeOptions="actionNone"  -->
+        
 </LinearLayout>
