Yeun.zhang 12-03 firstCommit 替换四大列表页面的列表控件，修复浏览页和消息页的部分bug

--- a/res/layout/activity_activity.xml
+++ b/res/layout/activity_activity.xml
@@ -83,7 +83,7 @@
             />
     </LinearLayout>
 
-    <com.lansun.qmyo.view.MyListView
+    <com.lansun.qmyo.view.ActivityMyListView
         android:id="@+id/lv_activity_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
