--- a/res/layout/activity_home_old.xml
+++ b/res/layout/activity_home_old.xml
@@ -23,7 +23,7 @@
 			    android:layout_width="match_parent"
                 android:layout_height="match_parent"
 			    > 
-            <com.lansun.qmyo.view.MyListView
+            <com.lansun.qmyo.view.TestMyListView
                 android:id="@+id/lv_home_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
